--- a/package.json
+++ b/package.json
@@ -7,15 +7,24 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
-        "@vitejs/plugin-vue": "^4.5.0",
+        "@quasar/vite-plugin": "^1.7.0",
+        "@vitejs/plugin-vue": "^4.6.2",
         "autoprefixer": "^10.4.19",
         "axios": "^1.6.4",
         "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.38",
-        "sass": "^1.56.1",
+        "sass": "^1.33.0",
         "tailwindcss": "^3.4.3",
         "vite": "^5.0.0",
         "vue": "^3.2.37"
+    },
+    "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-vue3": "^0.6.0",
+        "@inertiajs/vue3": "^1.2.0",
+        "@quasar/extras": "^1.16.11",
+        "quasar": "^2.16.4",
+        "vue-router": "^4.0.13"
     }
 }
